--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@
 $color-text:                   #fff !default;
 $color-heading:                #fff !default;
 $color-meta:                   #8594a5 !default;
-$color-bg:                     #000 !default;
+$color-bg:                     #fff !default;
 $color-bg-alt:                 #f5f6f7 !default;
 $color-bg-overlay:             rgba(245,246,247,.8) !default;
 $color-border:                 #e1e4e9 !default;
