--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 // Base
-$color-text:                   #fff !default;
-$color-heading:                #fff !default;
+$color-text:                   #000 !default;
+$color-heading:                #000 !default;
 $color-meta:                   #8594a5 !default;
 $color-bg:                     #fff !default;
 $color-bg-alt:                 #f5f6f7 !default;
